--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7427d6c4c0bb419fba88537847f9b5a8",
+       "model_id": "e04d36f4f245412cba260a28c1831118",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ada8a661bf9146dd98ac8c143cd17e5a",
+       "model_id": "28e8d00f3a9f4a2687c56750c5ff4762",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4cdce9df3f44b65a65986ac0abc8930",
+       "model_id": "6c363a2a8a9d4c89a661c698c5d329f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb9971283ef74ce09a740833f2c43eb6",
+       "model_id": "0794fd907a2449b4be40e4f59ca0ff1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,14 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30fbb9a2d7a449f89ad18f605be32a96",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "None"
+       "Box(children=(Box(children=(Label(value='Existing script-languages directory', layout=Layout(border_bottom='so…"
       ]
      },
      "metadata": {},
@@ -169,19 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "7d84889f-7c3a-4f69-9bf1-c193481867af",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8767f342f59144a096ecb9b4741c39d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Box(children=(Box(children=(Label(value='Target Directory', layout=Layout(border_bottom='solid 1px', border_le…"
+       "None"
       ]
      },
      "metadata": {},
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "31132726-9827-4c9b-8fb8-0884d2f36e67",
    "metadata": {},
    "outputs": [
@@ -210,18 +210,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into /home/jupyter/notebooks/script_languages_release...\n",
-      "Fetching submodules...\n",
       "Ready\n"
      ]
     }
    ],
    "source": [
     "from pathlib import Path\n",
+    "slc_dir = Path(ai_lab_config.get(slc_target_dir_store_key))\n",
     "if clone_slc_repo(ai_lab_config):\n",
     "    from git import Repo\n",
     "    \n",
-    "    slc_dir = Path(ai_lab_config.get(slc_target_dir_store_key))\n",
     "    if not slc_dir.is_dir():\n",
     "        print (f\"Cloning into {slc_dir}...\")\n",
     "        repo = Repo.clone_from(\"https://github.com/exasol/script-languages-release\", slc_dir)\n",
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
     "scrolled": true
@@ -251,10 +249,10 @@
     {
      "data": {
       "text/plain": [
-       "<exasol.nb_connector.secret_store.Secrets at 0x7ed15094dae0>"
+       "<exasol.nb_connector.secret_store.Secrets at 0x7e6ad1a29840>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
