--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
@@ -40,8 +40,17 @@
     "1. [SageMaker extension](sagemaker/sme_introduction.ipynb)\n",
     "1. [Transformers extension](transformers/te_introduction.ipynb)\n",
     "1. [Cloud store](cloud/01_import_data.ipynb)\n",
+    "1. [Script Languages Container](script_languages_container/using_a_script_languages_container.ipynb)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "712ffe17-4945-48db-99b1-780c05a8f01a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -60,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
