--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d5b5aab56a44f02af835eeccc0ba1af",
+       "model_id": "9a723961b7434468b2124780cf364706",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,33 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a2e90ebe-37d6-43e6-9677-dace6c06d942",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Secrets' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 8\u001b[0m\n\u001b[1;32m      4\u001b[0m slc_source_flavor_store_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mslc_flavor_path\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipyfilechooser\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FileChooser\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21muse_slc_repo\u001b[39m(conf: \u001b[43mSecrets\u001b[49m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m conf\u001b[38;5;241m.\u001b[39mget(slc_source_store_key) \u001b[38;5;241m==\u001b[39m slc_source_slc_repo_option_value\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_slc_source_selection_ui\u001b[39m(conf: Secrets) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m widgets\u001b[38;5;241m.\u001b[39mWidget:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Secrets' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "slc_source_store_key = \"slc_source\"\n",
+    "from exasol.nb_connector.ai_lab_config import AILabConfig\n",
+    "\n",
     "slc_source_slc_repo_option_value = \"Clone script languages release repository\"\n",
-    "slc_target_dir_store_key = \"slc_target_dir\"\n",
-    "slc_source_flavor_store_key = \"slc_flavor\"\n",
     "\n",
     "from ipyfilechooser import FileChooser\n",
+    "from pathlib import Path\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
     "\n",
-    "NOTEBOOKS_DIRECTORY = \"/home/jupyter/notebooks\"\n",
+    "\n",
+    "NOTEBOOKS_DIRECTORY = str(Path().parent.parent)\n",
+    "\n",
     "def clone_slc_repo(conf: Secrets) -> bool:\n",
-    "    return conf.get(slc_source_store_key) == slc_source_slc_repo_option_value\n",
+    "    return conf.get(AILabConfig.slc_source) == slc_source_slc_repo_option_value\n",
     "\n",
     "def get_slc_source_selection_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
@@ -80,7 +71,7 @@
     "    ui_look.input_layout.max_width = \"500px\"\n",
     "    \n",
     "    slc_sources = [slc_source_slc_repo_option_value, \"Use existing repository\"]\n",
-    "    default_value = conf.get(slc_source_store_key)\n",
+    "    default_value = conf.get(AILabConfig.slc_source)\n",
     "\n",
     "    flavor_source_selector = widgets.RadioButtons(options=slc_sources, value=default_value, \n",
     "                                                  layout=ui_look.input_layout, style=ui_look.input_style)\n",
@@ -89,7 +80,7 @@
     "\n",
     "\n",
     "    def select_flavor_source(btn):\n",
-    "        conf.save(slc_source_store_key, flavor_source_selector.value)\n",
+    "        conf.save(AILabConfig.slc_source, flavor_source_selector.value)\n",
     "        btn.icon = 'check'\n",
     "\n",
     "    def on_value_change(change):\n",
@@ -114,7 +105,7 @@
     "    \n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Target Base Directory', target_dir_chooser_widget, slc_target_dir_store_key),\n",
+    "            ('Target Base Directory', target_dir_chooser_widget, AILabConfig.slc_target_dir),\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -126,7 +117,7 @@
     "\n",
     "    def save_configuration(btn):\n",
     "        target_dir = Path(target_dir_chooser_widget.selected) / \"script_languages_release\"\n",
-    "        conf.save(slc_target_dir_store_key, str(target_dir))\n",
+    "        conf.save(AILabConfig.slc_target_dir, str(target_dir))\n",
     "        btn.icon = 'check'\n",
     "\n",
     "    def on_value_change(change):\n",
@@ -149,15 +140,15 @@
     "    \"\"\"\n",
     "    Creates a UI form for choosing the existing script-languages repository.\n",
     "    \"\"\"\n",
-    "    default_src_dir = conf.get(slc_target_dir_store_key, '')\n",
-    "    select_default = True if slc_target_dir_store_key else False\n",
+    "    default_src_dir = conf.get(AILabConfig.slc_target_dir, '')\n",
+    "    select_default = True if default_src_dir else False\n",
     "    src_dir_chooser_widget = FileChooser(path=default_src_dir, select_default=select_default)\n",
     "    src_dir_chooser_widget.show_only_dirs = True\n",
     "    src_dir_chooser_widget.sandbox_path = NOTEBOOKS_DIRECTORY\n",
     "    \n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Flavor source directory', src_dir_chooser_widget, slc_target_dir_store_key),\n",
+    "            ('Flavor source directory', src_dir_chooser_widget, AILabConfig.slc_target_dir),\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -172,7 +163,7 @@
     "        target_dir = Path(src_dir_chooser_widget.selected)\n",
     "        if not (target_dir / \"flavors\").is_dir():\n",
     "            popup_message(\"Invalid directory. You need to choose a valid script-languages repository.\")\n",
-    "        conf.save(slc_target_dir_store_key, str(src_dir_chooser_widget.selected))\n",
+    "        conf.save(AILabConfig.slc_target_dir, str(src_dir_chooser_widget.selected))\n",
     "        btn.icon = 'check'\n",
     "\n",
     "    def on_value_change(change):\n",
@@ -189,59 +180,7 @@
     "    \n",
     "\n",
     "    if not clone_slc_repo(conf):\n",
-    "        return ui\n",
-    "\n",
-    "\n",
-    "def get_flavor_selection_ui(conf: Secrets) -> widgets.Widget:\n",
-    "    \"\"\"\n",
-    "    Creates a UI form for choosing from a list of flavors.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    from os import listdir\n",
-    "    from os.path import isdir\n",
-    "    from pathlib import Path\n",
-    "\n",
-    "    slc_dir = conf.get(slc_target_dir_store_key)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    flavor_base_dir = Path(slc_dir) / \"flavors\"\n",
-    "    flavor_dirs =  [flavor_dir.name for flavor_dir in flavor_base_dir.iterdir() if flavor_dir.is_dir()]\n",
-    "\n",
-    "    ui_look = get_config_styles()\n",
-    "    ui_look.input_layout.max_width = \"500px\"\n",
-    "\n",
-    "    #Setup default value\n",
-    "    #First we check if we can match the value from the Secret store\n",
-    "    default_src_dir = conf.get(slc_source_flavor_store_key, '')\n",
-    "    default_src_dir_value = ''\n",
-    "    if default_src_dir:\n",
-    "        matching_flavor_dirs = [flavor_dir.name for flavor_dir in flavor_base_dir.iterdir() if flavor_dir.is_dir() and str(flavor_dir) == default_src_dir]\n",
-    "        if len(matching_flavor_dirs) == 1:\n",
-    "            default_src_dir_value = matching_flavor_dirs[0]\n",
-    "    #If not found in the secret store, we choose the first path which matches the template-\n",
-    "    if not default_src_dir_value:\n",
-    "        default_src_dir_value = \"template-Exasol-all-python-3.10\"\n",
-    "    flavor_selector = widgets.RadioButtons(options=flavor_dirs, value=default_src_dir_value, \n",
-    "                                           layout=ui_look.input_layout, style=ui_look.input_style)\n",
-    "    select_btn = widgets.Button(description='Select', style=ui_look.button_style, layout=ui_look.button_layout)\n",
-    "    header_lbl = widgets.Label(value='Flavor choice', style=ui_look.header_style, layout=ui_look.header_layout)\n",
-    "\n",
-    "\n",
-    "    def select_flavor(btn):\n",
-    "        conf.save(slc_source_flavor_store_key, str(flavor_selector.value))\n",
-    "        btn.icon = 'check'\n",
-    "\n",
-    "    def on_value_change(change):\n",
-    "        select_btn.icon = 'pen'\n",
-    "\n",
-    "    select_btn.on_click(select_flavor)\n",
-    "    flavor_selector.observe(on_value_change, names=['value'])\n",
-    "\n",
-    "    group_items = [header_lbl, widgets.Box([flavor_selector], layout=ui_look.row_layout)]\n",
-    "    items = [widgets.Box(group_items, layout=ui_look.group_layout), select_btn]\n",
-    "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
-    "    return ui"
+    "        return ui\n"
    ]
   },
   {
