Two notebook tests: 1. One which clones the slc-repo 2. The other one uses the existing repo

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
@@ -140,6 +140,8 @@
     "    \"\"\"\n",
     "    Creates a UI form for choosing the existing script-languages repository.\n",
     "    \"\"\"\n",
+    "    if clone_slc_repo(conf):\n",
+    "        return\n",
     "    default_src_dir = conf.get(AILabConfig.slc_target_dir, '')\n",
     "    select_default = True if default_src_dir else False\n",
     "    src_dir_chooser_widget = FileChooser(path=default_src_dir, select_default=select_default)\n",
