Fixed typing error

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_a_script_languages_container.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_a_script_languages_container.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "We are now going to append the \"xgboost\" Python package to one of the package lists by adding `xgboost|2.0.3` and `scikit-learn|1.5.0` to the `flavor_customization/packages/python3_pip_packages` file. \n",
     "Notes:\n",
-    " - running the following the command multiple times will iteratively append the packages)\n",
+    " - running the following command multiple times will iteratively append the packages\n",
     " - you can also click on the link and modify the file directly\n"
    ]
   },
