Fixes from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
@@ -5,28 +5,51 @@
    "id": "70724412-6577-4e69-86a1-b0d94e32eb96",
    "metadata": {},
    "source": [
-    "# Configure Flavor path\n",
-    "\n",
-    "Here we will give the user the option between:\n",
-    " - the Exasol <a href=\"https://github.com/exasol/script-languages-release\" target=\"_blank\" rel=\"noopener\">Script-Languages-Release</a> Github repository which provides the Script-Languages-Container flavor used to build the builtin container of the Exasol DB or to build customized container\n",
-    " - to use a custom flavor path\n",
+    "# Configure Tutorial Script Languages Container\n",
     "\n",
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "\n",
-    "## Setup\n",
-    "\n",
     "### Open Secure Configuration Storage\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e70ad0a9-7042-4fe8-814b-5c586b9bee6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0be60ee8b793403d907c0b3cf3967019",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "158b542c8f9147a5be2738363a0a2ad0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
@@ -34,19 +57,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cdb53e1-3d9e-40af-a340-4ef224727fa0",
+   "metadata": {},
+   "source": [
+    "## Specific Configuration for this Tutorial\n",
+    "\n",
+    "For this tutorial we need the build definition of a Script-Languages container.\n",
+    "\n",
+    "You have two options:\n",
+    " - default: Clone the Exasol <a href=\"https://github.com/exasol/script-languages-release\" target=\"_blank\" rel=\"noopener\">Script-Languages-Release</a> Github repository.\n",
+    " - for advanced users: Use a custom path to an existing clone of the Exasol <a href=\"https://github.com/exasol/script-languages-release\" target=\"_blank\" rel=\"noopener\">Script-Languages-Release</a> Github repository.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f02bc2f-411f-4479-b2e2-1afef96e4bd8",
    "metadata": {},
    "source": [
-    "# Load UI functions\n",
-    "Let's import some other UI functions that may be used in this notebook."
+    "### Load UI functions\n",
+    "Let's import some other UI functions that are used in this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4313a4fdbc1148a99447bc53bcd0a83a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ./utils/slc_ui.ipynb"
    ]
@@ -56,14 +108,14 @@
    "id": "395d6f4f-6e06-45e3-a9a7-54dc94e73332",
    "metadata": {},
    "source": [
-    "## Instantiate SLCT Manager\n",
+    "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector"
+    "We create an instance of the SlctManager class from the notebook connector. This class has some utility function which simplifies the use of the exaslct API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9f42c7c6-0297-4cb4-bedf-d3a2a58e69fc",
    "metadata": {},
    "outputs": [],
@@ -77,16 +129,31 @@
    "id": "178b59e9-8f46-43b1-b4f8-9cd6d6bf5076",
    "metadata": {},
    "source": [
-    "# Configure the Script-Languages directory\n",
-    "### Choose the source"
+    "### Configure the Script-Languages directory\n",
+    "#### Choose the source"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "732a45c6394446069befd207c395e44f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Flavor choice', layout=Layout(border_bottom='solid 1px', border_left=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(get_slc_source_selection_ui(ai_lab_config))"
    ]
@@ -97,15 +164,25 @@
    "metadata": {},
    "source": [
     "### Use existing script-languages-repository\n",
-    "If the user has chosen to use an existing script-languages-repository path we simply let him choose the path."
+    "If you have chosen to use an existing script-languages-repository path you simply select the path."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(get_existing_slc_ui(ai_lab_config))"
    ]
@@ -116,15 +193,30 @@
    "metadata": {},
    "source": [
     "### Clone the Script-Languages-Release repository\n",
-    "If the user wants to use the Exasol script-languages-repository we need first to choose the root path where the repository should be stored."
+    "If you want to use the Exasol script-languages-repository we need first to choose the root path where the repository should be stored."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7d84889f-7c3a-4f69-9bf1-c193481867af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a8ac09728fd49f0806184bf588914b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Target Directory', layout=Layout(border_bottom='solid 1px', border_le…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(get_slc_target_dir_ui(ai_lab_config))"
    ]
@@ -134,15 +226,25 @@
    "id": "a02ee33f-1958-4f9c-a796-01c6bc2a8787",
    "metadata": {},
    "source": [
-    "#### Now we can clone the repository"
+    "#### Clone the repository"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "31132726-9827-4c9b-8fb8-0884d2f36e67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into /home/jupyter/notebooks/script_languages_container/script_languages_release...\n",
+      "Fetching submodules...\n",
+      "Ready\n"
+     ]
+    }
+   ],
    "source": [
     "if clone_slc_repo(ai_lab_config):\n",
     "    slct_manager.clone_slc_repo()\n",
@@ -154,7 +256,7 @@
    "id": "53997bff-b4be-406f-b54f-ae9f39939ede",
    "metadata": {},
    "source": [
-    "#### Now we verify that the required flavor for the tutorial is present."
+    "#### Verify that the required flavor for the tutorial is present"
    ]
   },
   {
