--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f044043c-8fa1-442e-8d2c-b4221accff9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a723961b7434468b2124780cf364706",
+       "model_id": "ba3b8805cabd4763a9903674f8a2601a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a2e90ebe-37d6-43e6-9677-dace6c06d942",
    "metadata": {},
    "outputs": [],
@@ -70,8 +70,8 @@
     "    ui_look = get_config_styles()\n",
     "    ui_look.input_layout.max_width = \"500px\"\n",
     "    \n",
-    "    slc_sources = [slc_source_slc_repo_option_value, \"Use existing repository\"]\n",
-    "    default_value = conf.get(AILabConfig.slc_source)\n",
+    "    slc_sources = [slc_source_slc_repo_option_value, \"Use the existing clone\"]\n",
+    "    default_value = conf.get(AILabConfig.slc_source, slc_source_slc_repo_option_value)\n",
     "\n",
     "    flavor_source_selector = widgets.RadioButtons(options=slc_sources, value=default_value, \n",
     "                                                  layout=ui_look.input_layout, style=ui_look.input_style)\n",
