--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e70ad0a9-7042-4fe8-814b-5c586b9bee6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0be60ee8b793403d907c0b3cf3967019",
+       "model_id": "906079c18acf4f34aff184ef9053acb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "158b542c8f9147a5be2738363a0a2ad0",
+       "model_id": "6d69f1ece44244d0bebdf2348a4c029a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,19 +75,19 @@
    "metadata": {},
    "source": [
     "### Load UI functions\n",
-    "Let's import some other UI functions that are used in this notebook."
+    "Let's import some additional UI functions in order to use them in this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4313a4fdbc1148a99447bc53bcd0a83a",
+       "model_id": "6271aa10fd834260aae5775c16d1e2b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,12 +110,12 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. This class has some utility function which simplifies the use of the exaslct API."
+    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. This class has some utility function which simplifies the use of the exaslct API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "9f42c7c6-0297-4cb4-bedf-d3a2a58e69fc",
    "metadata": {},
    "outputs": [],
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "732a45c6394446069befd207c395e44f",
+       "model_id": "ed8931af2f9343b7bd733d7bca5c111b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a8ac09728fd49f0806184bf588914b4",
+       "model_id": "7a41cec565a642039dee7971704e7946",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,8 +239,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into /home/jupyter/notebooks/script_languages_container/script_languages_release...\n",
-      "Fetching submodules...\n",
       "Ready\n"
      ]
     }
@@ -261,12 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Script-languages repository path is '/home/jupyter/notebooks/script_languages_container/my_slc/script_languages_release'\n"
+     ]
+    }
+   ],
    "source": [
     "if not slct_manager.check_slc_repo_complete():\n",
     "    popup_message(f\"The script-languages repository does not fullfill requirements.\")\n"
@@ -278,7 +284,7 @@
    "metadata": {},
    "source": [
     "## Finish\n",
-    "Now you can continue with [Using a script-languages-container](./using_a_script_languages_container.ipynb) "
+    "Now you can continue with [Using the script-languages-container tool](./using_the_script_languages_container_tool.ipynb) "
    ]
   },
   {
